<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eaeaea"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llDetailCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/detail_content_padding"
        android:background="@color/background_movie_detail_primary"
        android:orientation="vertical"
        android:padding="@dimen/detail_content_padding">

        <TextView
            android:id="@+id/info_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp"
            android:text="@string/details"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/text_primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/released"
                 />

            <TextView
                android:id="@+id/tvDetailReleased"
                style="@style/TextViewMovieDetailValue"
                android:text="November, 2015" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/runtime"
                />

            <TextView
                android:id="@+id/tvDetailRuntime"
                style="@style/TextViewMovieDetailValue"
                android:text="124min" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/genres" />

            <TextView
                android:id="@+id/tvDetailGenres"
                style="@style/TextViewMovieDetailValue"
                android:text="adventure, triller"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/budget" />

            <TextView
                android:id="@+id/tvDetailBudget"
                style="@style/TextViewMovieDetailValue"
                android:text="$ 122 454 455" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/revenue" />

            <TextView
                android:id="@+id/tvDetailRevenue"
                style="@style/TextViewMovieDetailValue"
                android:text="$ 98 454 455" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewMovieDetailKey"
                android:text="@string/languages" />

            <TextView
                android:id="@+id/tvDetailLanguages"
                style="@style/TextViewMovieDetailValue"
                android:text="english" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>